<resources>
  <string name="app_name">ScoreKeeper</string>
  <string name="reset_score">Reset Score</string>
  <string name="scoreHome">0</string>
  <string name="text_home">HOME</string>
  <string name="button_3_points_home">+3 Points</string>
  <string name="button_2_points_home">+2 Points</string>
  <string name="button_free_throw_home">+Free Throw</string>
  <string name="fouls_home">0</string>
  <string name="text_fouls_home">FOULS</string>
  <string name="button_fouls_home">+FOULS</string>
  <string name="scoreVisitor">0</string>
  <string name="text_visitor">VISITOR</string>
  <string name="button_3_points_visitor">+3 Points</string>
  <string name="button_2_points_visitor">+2 Points</string>
  <string name="button_free_throw_visitor">+Free Throw</string>
  <string name="foulsVisitor">0</string>
  <string name="text_fouls_visitor">FOULS</string>
  <string name="button_fouls_visitor">+FOULS</string>
</resources>
