<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/background"
  tools:context="com.fabiotp.scorekeeper.MainActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <!-- Team A Layout -->
    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:orientation="vertical">

      <TextView
        android:id="@+id/team_home_score"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="46dp"
        android:padding="4dp"
        android:background="@drawable/border"
        android:gravity="center_horizontal"
        android:text="@string/scoreHome"
        android:textColor="@color/score"
        android:textSize="64sp"/>

      <TextView
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:gravity="center_horizontal"
        android:text="@string/text_home"
        android:textColor="@color/team"
        android:textSize="34sp"/>

      <Button
        android:id="@+id/button_home_3points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/button"
        android:onClick="add3PointsHome"
        android:text="@string/button_3_points_home"
        android:textColor="@color/white"/>

      <Button
        android:id="@+id/button_home_2points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/button"
        android:onClick="add2PointsHome"
        android:text="@string/button_2_points_home"
        android:textColor="@color/white"/>

      <Button
        android:id="@+id/button_home_1points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/button"
        android:onClick="add1PointsHome"
        android:text="@string/button_free_throw_home"
        android:textColor="@color/white"/>

      <!-- Home Team Fouls -->
      <TextView
        android:id="@+id/team_home_foul"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:padding="4dp"
        android:background="@drawable/border"
        android:gravity="center_horizontal"
        android:text="@string/fouls_home"
        android:textColor="@color/fouls"
        android:textSize="56sp"/>

      <TextView
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:gravity="center_horizontal"
        android:text="@string/text_fouls_home"
        android:textColor="@color/white"
        android:textSize="24sp"/>

      <Button
        android:id="@+id/button_home_foul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/button"
        android:onClick="addFoulHome"
        android:text="@string/button_fouls_home"
        android:textColor="@color/white"/>

    </LinearLayout>

    <View
      android:layout_width="3dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="100dp"
      android:background="@android:color/darker_gray">
    </View>

    <!-- Team B Layout -->
    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:orientation="vertical">

      <TextView
        android:id="@+id/team_visitor_score"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="46dp"
        android:padding="4dp"
        android:background="@drawable/border"
        android:gravity="center_horizontal"
        android:text="@string/scoreVisitor"
        android:textColor="@color/score"
        android:textSize="64sp"/>

      <TextView
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:gravity="center_horizontal"
        android:text="@string/text_visitor"
        android:textColor="@color/team"
        android:textSize="34sp"/>

      <Button
        android:id="@+id/button_visitor_3points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/button"
        android:onClick="add3PointsVisitor"
        android:text="@string/button_3_points_visitor"
        android:textColor="@color/team"/>

      <Button
        android:id="@+id/button_visitor_2points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/button"
        android:onClick="add2PointsVisitor"
        android:text="@string/button_2_points_visitor"
        android:textColor="@color/team"/>

      <Button
        android:id="@+id/button_visitor_1points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/button"
        android:onClick="add1PointsVisitor"
        android:text="@string/button_free_throw_visitor"
        android:textColor="@color/team"/>

      <!-- Visitor Team Fouls -->
      <TextView
        android:id="@+id/team_visitor_foul"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:padding="4dp"
        android:background="@drawable/border"
        android:gravity="center_horizontal"
        android:text="@string/foulsVisitor"
        android:textColor="@color/fouls"
        android:textSize="56sp"/>

      <TextView
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:gravity="center_horizontal"
        android:text="@string/text_fouls_visitor"
        android:textColor="@color/white"
        android:textSize="24sp"/>

      <Button
        android:id="@+id/button_b_foul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/button"
        android:onClick="addFoulVisitor"
        android:text="@string/button_fouls_visitor"
        android:textColor="@color/white"/>

    </LinearLayout>

  </LinearLayout>

  <Button
    android:id="@+id/button_resetScore"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:padding="8dp"
    android:background="@color/button"
    android:onClick="resetScore"
    android:text="@string/reset_score"
    android:textColor="@color/team"/>

</RelativeLayout>
